--- a/Public/BlogManager.html
+++ b/Public/BlogManager.html
@@ -72,15 +72,15 @@
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="Home.html">Home</a></li>
 							<li>
-								<a href="Assets.html" class="fh5co-sub-ddown">Assets</a>
-								<ul class="fh5co-sub-menu">
-									<li><a href="#">New</a></li>
-									<li><a href="#">Discount</a></li>
-									<li><a href="#">Sale</a></li>
-									<li><a href="#">Rent</a></li>
-									<li><a href="#">All</a></li>
-								</ul>
-							</li>
+								<li>
+									<a>Assets</a>
+										<ul class="fh5co-sub-menu">
+											<li><a href="#">All</a></li>
+											<li><a href="AssetsManager.html">filter</a></li>
+											<li><a href="#">New</a></li>
+											<li><a href="#">Sale</a></li>
+										</ul>
+								</li>
 							<li><a href="Manager.html">Manager</a></li>
 							<li class="active"><a href="BlogManager.html">Blog</a></li>
 							<li><a href="AddManager.html">Add</a></li>
