--- a/Public/Home.html
+++ b/Public/Home.html
@@ -9,8 +9,6 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -24,53 +22,38 @@
 	
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
-	
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Superfish -->
 	<link rel="stylesheet" href="css/superfish.css">
-	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- Date Picker -->
 	<link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-	<!-- CS Select -->
 	<link rel="stylesheet" href="css/cs-select.css">
 	<link rel="stylesheet" href="css/cs-skin-border.css">
-	
 	<link rel="stylesheet" href="css/style.css">
 
-	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-
 
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
 		<div id="fh5co-page">
-
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
 					<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="Home.html">Home</a></li>
 							<li>
-								<a href="Assets.html" class="fh5co-sub-ddown">Assets</a>
+								<a>Assets</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="#">New</a></li>
-									<li><a href="#">Discount</a></li>
-									<li><a href="#">Sale</a></li>
-									<li><a href="#">Rent</a></li>
-									<li><a href="#">All</a></li>
+									<li><a href="all.html">All</a></li>
+									<li><a href="Assets.html">filter</a></li>
+									<li><a href="new.html">New</a></li>
+									<li><a href="sale.html">Sale</a></li>
 								</ul>
 							</li>
 							<li><a href="agent.html">Agent</a></li>
@@ -82,8 +65,6 @@
 				</div>
 			</div>
 		</header>
-
-		<!-- end:header-top -->
 
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
