--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -8,8 +8,6 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -20,38 +18,20 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
-	
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Superfish -->
 	<link rel="stylesheet" href="css/superfish.css">
-	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<!-- Date Picker -->
 	<link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-	<!-- CS Select -->
 	<link rel="stylesheet" href="css/cs-select.css">
 	<link rel="stylesheet" href="css/cs-skin-border.css">
-	
 	<link rel="stylesheet" href="css/style.css">
 
-
-	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
 
 	</head>
 	<body>
@@ -63,21 +43,17 @@
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
 					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="HomeManager.html">Home</a></li>
 							<li>
-								<a href="AssetsManager.html" class="fh5co-sub-ddown">Assets</a>
-								<ul class="fh5co-sub-menu">
-									<ul class="fh5co-sub-menu">
-										<li><a href="#">New</a></li>
-										<li><a href="#">Discount</a></li>
-										<li><a href="#">Sale</a></li>
-										<li><a href="#">Rent</a></li>
-										<li><a href="#">All</a></li>
-								</ul>
-								</ul>
+									<a>Assets</a>
+										<ul class="fh5co-sub-menu">
+											<li><a href="#">All</a></li>
+											<li><a href="AssetsManager.html">filter</a></li>
+											<li><a href="#">New</a></li>
+											<li><a href="#">Sale</a></li>
+										</ul>
 							</li>
 							<li><a href="Manager.html">Manager</a></li>
 							<li><a href="BlogManager.html">Blog</a></li>
@@ -87,8 +63,6 @@
 				</div>
 			</div>
 		</header>
-
-		<!-- end:header-top -->
 
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
