--- a/Public/blog.html
+++ b/Public/blog.html
@@ -71,14 +71,13 @@
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="HomeManager.html">Home</a></li>
 							<li>
-								<a href="AssetsManager.html" class="fh5co-sub-ddown">Assets</a>
-								<ul class="fh5co-sub-menu">
-									<li><a href="#">New</a></li>
-									<li><a href="#">Discount</a></li>
-									<li><a href="#">Sale</a></li>
-									<li><a href="#">Rent</a></li>
-									<li><a href="#">All</a></li>
-								</ul>
+								<a>Assets</a>
+									<ul class="fh5co-sub-menu">
+										<li><a href="all.html">All</a></li>
+										<li><a href="Assets.html">filter</a></li>
+										<li><a href="new.html">New</a></li>
+										<li><a href="sale.html">Sale</a></li>
+									</ul>
 							</li>
                             <li><a href="agent.html">Agent</a></li>
 							<li><a href="Meeting.html">Meeting</a></li>
