--- a/Public/new.html
+++ b/Public/new.html
@@ -94,7 +94,7 @@
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                             <div class="slider-text-inner">
                                     <h2 class="heading-title">New properties</h2>
-                                    <p class="fh5co-lead">Coming Soon <i class="icon-heart3"></i> By Queen Michal Zangi </p>
+                                    <p class="fh5co-lead">Coming Soon <i class="icon-heart3"></i> </p>
                         </div>
                         </div>
                     </div>
