--- a/Public/blog.html
+++ b/Public/blog.html
@@ -154,15 +154,15 @@
             </div>
 			
 			<div class="container">
-                    <!-- Property Information Form -->
                     <form id="feedbackForm" method="POST" action="/addFeedback">
                         <div class="form-group">
 								<label for="Name">Name:</label>
 								<input type="text" class="form-control" id="Name" name="Name" required>
 						</div>
 						<div class="form-group">
-								<label for="Date">Date:</label>
-								<input type="date" class="form-control" id="Date" name="Date" required>
+							<label for="date">Date Posted:</label>
+							<input type="date" class="form-control"  id="Date" name="Date"  readonly>
+
 						</div>
 						<div class="form-group">
 								<label for="FeedbackDesc">FeedbackDesc:</label>
@@ -270,6 +270,22 @@
 	<!-- jQuery -->
 
 <script>
+	
+   
+document.addEventListener("DOMContentLoaded", function () {
+    // Get the current date
+    var today = new Date();
+    var dd = String(today.getDate()).padStart(2, "0");
+    var mm = String(today.getMonth() + 1).padStart(2, "0"); //January is 0!
+    var yyyy = today.getFullYear();
+
+    today = yyyy + "-" + mm + "-" + dd;
+
+    // Set the current date to the Date input field
+    document.getElementById("Date").value = today;
+});
+
+
 	   document.addEventListener('DOMContentLoaded', async () => {
             try {
                 const response = await fetch('/feedback');
@@ -291,7 +307,7 @@
 
 					card.innerHTML = `
 						<h2 <i class="icon-bubble2"> <i class="comment"> ${feedback.Name}</h2>
-                        <p>Date: ${feedback.Date}</p>
+                        <p>Date Posted: ${feedback.Date} </p>
                         <p>${feedback.FeedbackDesc}</p>
                         <p>Rating: ${feedback.rating} stars</p>
                     `; 
