--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -69,35 +69,42 @@
         }
     </style>
 
-	</head>
-	<body>
-		<div id="fh5co-wrapper">
-		<div id="fh5co-page">
-		<header id="fh5co-header-section" class="sticky-banner">
-			<div class="container">
-				<div class="nav-header">
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-					<nav id="fh5co-menu-wrap" role="navigation">
-						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li><a href="HomeManager.html">Home</a></li>
-							<li>
-								<a>Assets</a>
-									<ul class="fh5co-sub-menu">
-										<li><a href="#">All</a></li>
-										<li><a href="Assets.html">filter</a></li>
-										<li><a href="#">New</a></li>
-										<li><a href="#">Sale</a></li>
-									</ul>
-								</li>
-                            <li><a href="Manager.html">Manager</a></li>
-							<li><a href="BlogManager.html">Blog</a></li>
-							<li><a href="AddManager.html">Add</a></li>
-						</ul>
-					</nav>
-				</div>
+</head>
+<body>
+	<div id="fh5co-wrapper">
+	<div id="fh5co-page">
+
+	<header id="fh5co-header-section" class="sticky-banner">
+		<div class="container">
+			<div class="nav-header">
+				<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+				<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+				<nav id="fh5co-menu-wrap" role="navigation">
+					<ul class="sf-menu" id="fh5co-primary-menu">
+						<li class="active"><a href="HomeManager.html">Home</a></li>
+						<li>
+							<a>Assets</a>
+								<ul class="fh5co-sub-menu">
+									<li><a href="all-Manager.html">All</a></li>
+									<li><a href="filter-Manager.html">filter</a></li>
+								</ul>
+						</li>
+						<li><a href="users-Manager.html">Users</a></li>
+						<li><a href="blog-Manager.html">Blog</a></li>
+						<li>
+							<a>Activities</a>
+								<ul class="fh5co-sub-menu">
+									<li><a href="addP-Manager.html">Add Property</a></li>
+									<li><a href="updateP-Manager.html">Update Property</a></li>
+									<li><a href="addC-Manager.html">Add a Customer</a></li>
+									<li><a href="updateC-Manager.html">Update Customer</a></li>
+								</ul>
+						</li>
+					</ul>
+				</nav>
 			</div>
-		</header>
+		</div>
+	</header>
 
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
@@ -155,7 +162,7 @@
                         </div>
                         <div class="form-group">
                             <label for="assetImage">Image URL:</label>
-							<input type="file" class="form-control" id="assetImage" name="assetImage" required>
+							<input type="text" class="form-control" id="assetImage" name="assetImage" required>
                         </div> <br>
                         <button type="submit" class="btn btn-primary" id="sub">Submit</button>
                         <div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
