--- a/Public/contact-Customer.html
+++ b/Public/contact-Customer.html
@@ -123,11 +123,11 @@
 					<div class="row animate-box">
 						<div class="col-md-6">
 							<h3 class="section-title">Our Address:</h3>
-							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i> 4 Heh Beiyar St., Tel Aviv</li>
+							<ul class="contact-info"> 
+								<li><i class="icon-location-pin"></i>Heh B'eiyar 4, Tel Aviv</li>
 								<li><i class="icon-phone2"></i>03-5333307</li>
-								<li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-mail"></i><a href="#">Heh.B'eiyar@gmail.com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">http://biyar.co.il</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6">
