--- a/Public/sale-Customer.html
+++ b/Public/sale-Customer.html
@@ -35,38 +35,37 @@
 
     <script src="js/modernizr-2.6.2.min.js"></script>
 
-    </head>
-    <body>
-        <div id="fh5co-wrapper">
-        <div id="fh5co-page">
-
-        <header id="fh5co-header-section" class="sticky-banner">
-            <div class="container">
-                <div class="nav-header">
-                    <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-                    <h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-                    <nav id="fh5co-menu-wrap" role="navigation">
-                        <ul class="sf-menu" id="fh5co-primary-menu">
-                            <li><a href="Home.html">Home</a></li>
-                            <li class="active">
-                                <li>
-                                    <a>Assets</a>
-                                        <ul class="fh5co-sub-menu">
-                                            <li><a href="all.html">All</a></li>
-                                            <li><a href="Assets.html">filter</a></li>
-                                            <li><a href="new.html">New</a></li>
-                                            <li><a href="sale.html">Sale</a></li>
-                                        </ul>
-                                </li>
-                            <li><a href="agent.html">Agent</a></li>
-                            <li><a href="Meeting.html">Meeting</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+</head>
+<body>
+    <div id="fh5co-wrapper">
+    <div id="fh5co-page">
+    <header id="fh5co-header-section" class="sticky-banner">
+        <div class="container">
+            <div class="nav-header">
+                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+                <h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+                <nav id="fh5co-menu-wrap" role="navigation">
+                    <ul class="sf-menu" id="fh5co-primary-menu">
+                        <li class="active"><a href="Home.html">Home</a></li>
+                        <li>
+                            <a>Assets</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="all-Customer.html">All</a></li>
+                                <li><a href="filter-Customer.html">filter</a></li>
+                                <li><a href="new-Customer.html">New</a></li>
+                                <li><a href="sale-Customer.html">Sale</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="agent-Customer.html">Agent</a></li>
+                        <li><a href="meeting-Customer.html">Meeting</a></li>
+                        <li><a href="blog-Customer.html">Blog</a></li>
+                        <li><a href="contact-Customer.html">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-        </header>
+        </div>
+    </header>
+
 
         <aside id="fh5co-hero" class="js-fullheight">
             <div class="flexslider js-fullheight">
