--- a/Public/contact-Customer.html
+++ b/Public/contact-Customer.html
@@ -83,6 +83,7 @@
 							<li><a href="Meeting.html">Meeting</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li class="active"><a href="contact.html">Contact</a></li>
+							<li><a href="addC-Manager.html"> Add Customer</a></li>
 						</ul>
 					</nav>
 				</div>
