--- a/Public/filter-Customer.html
+++ b/Public/filter-Customer.html
@@ -58,6 +58,7 @@
                         <li><a href="meeting-Customer.html">Meeting</a></li>
                         <li><a href="blog-Customer.html">Blog</a></li>
                         <li><a href="contact-Customer.html">Contact</a></li>
+                        <li><a href="addC-Manager.html"> Add Customer</a></li>
                     </ul>
                 </nav>
             </div>
