--- a/Public/meeting-Customer.html
+++ b/Public/meeting-Customer.html
@@ -75,10 +75,10 @@
 							</ul>
 						</li>
 						<li><a href="agent-Customer.html">Agent</a></li>
-						<li><a href="meeting-Customer.html">Meeting</a></li>
+						<li class="active"> <a href="meeting-Customer.html">Meeting</a></li>
 						<li><a href="blog-Customer.html">Blog</a></li>
 						<li><a href="contact-Customer.html">Contact</a></li>
-						<li><a href="addC-Manager.html"> Add Customer</a></li>
+						<li><a href="addC-Customer.html"> Add Customer</a></li>
 					</ul>
 				</nav>
 			</div>
