--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -63,28 +63,25 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+						<h1 id="fh5co-logo"><a href="Home.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
-								<li class="active"><a href="HomeManager.html">Home</a></li>
+								<li class="active"><a href="Home.html">Home</a></li>
 								<li>
 									<a>Assets</a>
-										<ul class="fh5co-sub-menu">
-											<li><a href="all-Manager.html">All</a></li>
-											<li><a href="filter-Manager.html">filter</a></li>
-										</ul>
+									<ul class="fh5co-sub-menu">
+										<li><a href="all-Customer.html">All</a></li>
+										<li><a href="filter-Customer.html">filter</a></li>
+										<li><a href="new-Customer.html">New</a></li>
+										<li><a href="sale-Customer.html">Sale</a></li>
+									</ul>
 								</li>
-								<li><a href="users-Manager.html">Users</a></li>
-								<li><a href="blog-Manager.html">Blog</a></li>
-								<li>
-									<a>Activities</a>
-										<ul class="fh5co-sub-menu">
-											<li><a href="addP-Manager.html">Add Property</a></li>
-											<li><a href="updateP-Manager.html">Update Property</a></li>
-											<li><a href="addC-Manager.html">Add a Customer</a></li>
-											<li><a href="updateC-Manager.html">Update Customer</a></li>
-										</ul>
-								</li>
+								<li><a href="agent-Customer.html">Agent</a></li>
+								<li><a href="meeting-Customer.html">Meeting</a></li>
+								<li><a href="blog-Customer.html">Blog</a></li>
+								<li><a href="contact-Customer.html">Contact</a></li>
+								<li><a href=""> Add Customer</a></li>
+
 							</ul>
 						</nav>
 					</div>
