--- a/Public/agent-Customer.html
+++ b/Public/agent-Customer.html
@@ -80,11 +80,11 @@
 										<li><a href="sale-Customer.html">Sale</a></li>
 									</ul>
 								</li>
-								<li><a href="agent-Customer.html">Agent</a></li>
+								<li class="active"><a href="agent-Customer.html">Agent</a></li>
 								<li><a href="meeting-Customer.html">Meeting</a></li>
 								<li><a href="blog-Customer.html">Blog</a></li>
 								<li><a href="contact-Customer.html">Contact</a></li>
-								<li><a href="addC-Manager.html"> Add Customer</a></li>
+								<li><a href="addC-Customer.html"> Add Customer</a></li>
 							</ul>
 						</nav>
 					</div>
