--- a/Public/contact-Customer.html
+++ b/Public/contact-Customer.html
@@ -73,17 +73,17 @@
 							<li>
 								<a>Assets</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="all.html">All</a></li>
-										<li><a href="Assets.html">filter</a></li>
-										<li><a href="new.html">New</a></li>
-										<li><a href="sale.html">Sale</a></li>
+										<li><a href="all-Customer.html">All</a></li>
+										<li><a href="filter-Customer.html">filter</a></li>
+										<li><a href="new-Customer.html">New</a></li>
+										<li><a href="sale-Customer.html">Sale</a></li>
 									</ul>
 							</li>
-							<li><a href="agent.html">Agent</a></li>
-							<li><a href="Meeting.html">Meeting</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
-							<li><a href="addC-Manager.html"> Add Customer</a></li>
+							<li><a href="agent-Customer.html">Agent</a></li>
+							<li><a href="meeting-Customer.html">Meeting</a></li>
+							<li><a href="blog-Customer.html">Blog</a></li>
+							<li class="active"><a href="contact-Customer.html">Contact</a></li>
+							<li><a href="addC-Customer.html"> Add Customer</a></li>
 						</ul>
 					</nav>
 				</div>
