--- a/Public/addP-Manager.html
+++ b/Public/addP-Manager.html
@@ -147,6 +147,10 @@
                     <input type="text" class="form-control" id="assetStreet" name="assetStreet" required>
                 </div>
                 <div class="form-group">
+                    <label for="assetDescription">Description:</label>
+                    <input type="text" class="form-control" id="assetDescription" name="assetDescription" required>
+                </div>
+                <div class="form-group">
                     <label for="assetStreetNumber">Street Number:</label>
                     <input type="text" class="form-control" id="assetStreetNumber" name="assetStreetNumber" required>
                 </div>
