--- a/Public/filter-Customer.html
+++ b/Public/filter-Customer.html
@@ -200,6 +200,8 @@
        				 <p>Price: ${asset.AssetPrice}</p>
         			<p>Street: ${asset.AssetStreet}</p>
         			<p>Room Number: ${asset.RoomNum}</p>
+                    <p>Asset Description: ${asset.AssetDescription}</p>
+
     				`;
     				assetContainer.appendChild(details);
 
