--- a/Public/filter-Manager.html
+++ b/Public/filter-Manager.html
@@ -226,6 +226,7 @@
        				 <p>Price: ${asset.AssetPrice}</p>
         			<p>Street: ${asset.AssetStreet}</p>
         			<p>Room Number: ${asset.RoomNum}</p>
+                    <p>Description: ${asset.AssetDescription}</p>
     				`;
     				assetContainer.appendChild(details);
 
