--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -52,10 +52,10 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+	<style>
+		
+	</style>
+
 
 </head>
 <body>
@@ -147,7 +147,8 @@
 			</div>
 		</div>
 
-	
+	<!-- fh5co-blog-section -->
+
 		<!-- fh5co-blog-section -->
 
 		<footer>
